test/spec_vectors/simd_i16x8_extadd_pairwise_i8x16/fail/module_2.wat
(module (func (result v128) (i16x8.extadd_pairwise_i8x16_u (i32.const 0))))